# dsrp-ml-notebooks

./: LICENSE  Makefile  README.md  main.py  pyproject.toml  test_lineal.ipynb
notebooks/: regression_laptop.ipynb
package_dsrp_mle/: __init__.py  dataset.py  features.py  plots.py
package_dsrp_mle/modeling/: predict.py  train.py
