[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "package_dsrp_mle"
version = "0.0.1"
description = "dataset prediction project"
authors = [
  { name = "Aydee Quispe Mamani" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jupyterlab>=4.4.3",
    "lightgbm>=4.6.0",
    "loguru",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tqdm",
    "typer",
    "xgboost>=3.0.2",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["package_dsrp_mle"]
include = ["pyproject.toml", "package_dsrp_mle/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["package_dsrp_mle"]
force-sort-within-sections = true

